@@ -1,3 +1,8 @@
+2007-06-15 Manuel Arostegui <marostegui@artica.es>
+
+	* en/pandora_install.xml: Changes to adapt the
+          document to the 1.3 release
+
 2007-05-26 Manuel Arostegui <marostegui@artica.es>
 
 	* en/pandora_install.xml: Fixed a small typo related
